; ModuleID = '/home/carl/AnghaBench/micropython/ports/esp8266/extr_hspi.c_spi_init.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/esp8266/extr_hspi.c_spi_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPI_CLK_USE_DIV = common dso_local global i32 0, align 4
@SPI_CLK_PREDIV = common dso_local global i32 0, align 4
@SPI_CLK_CNTDIV = common dso_local global i32 0, align 4
@SPI_BYTE_ORDER_HIGH_TO_LOW = common dso_local global i32 0, align 4
@SPI_CS_SETUP = common dso_local global i32 0, align 4
@SPI_CS_HOLD = common dso_local global i32 0, align 4
@SPI_FLASH_MODE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spi_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @SPI_CLK_USE_DIV, align 4
  %5 = call i32 @spi_init_gpio(i32 %3, i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @SPI_CLK_PREDIV, align 4
  %8 = load i32, i32* @SPI_CLK_CNTDIV, align 4
  %9 = call i32 @spi_clock(i32 %6, i32 %7, i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @SPI_BYTE_ORDER_HIGH_TO_LOW, align 4
  %12 = call i32 @spi_tx_byte_order(i32 %10, i32 %11)
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @SPI_BYTE_ORDER_HIGH_TO_LOW, align 4
  %15 = call i32 @spi_rx_byte_order(i32 %13, i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @SPI_USER(i32 %16)
  %18 = load i32, i32* @SPI_CS_SETUP, align 4
  %19 = load i32, i32* @SPI_CS_HOLD, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @SET_PERI_REG_MASK(i32 %17, i32 %20)
  %22 = load i32, i32* %2, align 4
  %23 = call i32 @SPI_USER(i32 %22)
  %24 = load i32, i32* @SPI_FLASH_MODE, align 4
  %25 = call i32 @CLEAR_PERI_REG_MASK(i32 %23, i32 %24)
  ret void
}

declare dso_local i32 @spi_init_gpio(i32, i32) #1

declare dso_local i32 @spi_clock(i32, i32, i32) #1

declare dso_local i32 @spi_tx_byte_order(i32, i32) #1

declare dso_local i32 @spi_rx_byte_order(i32, i32) #1

declare dso_local i32 @SET_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @SPI_USER(i32) #1

declare dso_local i32 @CLEAR_PERI_REG_MASK(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
